--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         <button>Contactame</button>
         <div class="cuadrado__solido-uno"></div>
         <div class="cuadrado__solido-dos"></div>
-        <div class="cuadrado_animado cuadrado__borde-uno"></div>
-        <div class="cuadrado_animado cuadrado__borde-tres"></div>
-        <div class="cuadrado_animado cuadrado__borde-dos"></div>
+        <div class="cuadrado__borde-uno"></div>
+        <div class="cuadrado__borde-tres"></div>
+        <div class="cuadrado__borde-dos"></div>
     </section>
+  
     <section id="works">
         <div class="puntero-titulo"><h4>Works</h4></div>
 
@@ -49,12 +50,9 @@
         <div style="width: 1582.34px; height: 1206.52px; left: -49.89px; top: 3393.77px; position: absolute; background: linear-gradient(180deg, rgba(157, 38, 45, 0.08) 0%, rgba(157, 38, 45, 0) 100%); box-shadow: 20px 20px 20px; filter: blur(20px)"></div> -->
         <!-- <div style="width: 50px; height: 50px; left: 173px; top: 1009.97px; position: absolute; transform: rotate(-41.25deg); transform-origin: 0 0; background: #9D262D"></div> -->
 
-        <img style="width: 335px; height: 324px; left: 68px; top: 1391.09px; position: absolute; box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25)" src="https://via.placeholder.com/335x324" />
-        <img style="width: 323.58px; height: 335.06px; left: 479.65px; top: 1924.88px; position: absolute; transform: rotate(-88.86deg); transform-origin: 0 0; box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25)" src="https://via.placeholder.com/324x335" />
-        <img style="width: 328.37px; height: 330.36px; left: 1069.33px; top: 1761.39px; position: absolute; transform: rotate(-130.99deg); transform-origin: 0 0; box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25)" src="https://via.placeholder.com/328x330" />
-        <img style="width: 328.37px; height: 330.36px; left: 639.40px; top: 1521.86px; position: absolute; transform: rotate(-130.99deg); transform-origin: 0 0; box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25)" src="https://via.placeholder.com/328x330" />
-        <div style="left: 567px; top: 1252px; position: absolute; text-align: center; color: #F2F1EF; font-size: 28.75px; font-family: Jost; font-style: italic; font-weight: 400; text-decoration: underline; text-transform: capitalize; word-wrap: break-word">Diseño Web
+       
          </div>
     <footer></footer>    
+    
 </body>
 </html>
