--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
         </div>
         <div class="works-container">
             <div class="work_box box-one">
+                <a   href="https://origuencristian.github.io/Encriotador-Challende-Alura-Latam/"><img src="./assets/imagen-encriptador-progect.png" alt=""></a>
             </div>
             <div class="work_box box-two">
+                <a href=""><img src="" alt=""></a>
             </div>
             <div class="work_box box-three">
+                <a href=""><img src="" alt=""></a>
             </div>
             <div class="work_box box-four">
+                <a href=""><img src="" alt=""></a>
             </div>
 
         </div>
