--- a/index.html
+++ b/index.html
@@ -135,16 +135,16 @@
             </p>
         </div>
         <div class="cuadrados-animados">
-            <div class="cuadrados"></div>
-            <div class="cuadrados"></div>
-            <div class="cuadrados"></div>
-            <div class="cuadrados"></div>
+            <div class="cuadrados about-cuadrado__uno"></div>
+            <div class="cuadrados about-cuadrado__dos"></div>
+            <div class="cuadrados about-cuadrado__tres"></div>
+            <div class="cuadrados about-cuadrado__cuatro"></div>
         </div>
         <div class="contact-iconos">
            <a href=""><img src="/assets/Vector.svg" alt=""></a> 
            <a href=""><img src="/assets/Vector wapsap.svg" alt=""></a> 
            <a href=""><img src="/assets/Vector linkedink.svg" alt=""></a> 
-           <a href=""><img src="" alt=""></a> 
+           <a href=""><img src="/assets/Github.svg" alt=""></a> 
         </div>
     </section>
     <footer>
