--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="./styles/generals.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/animations.css">
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
     <title>Origuen Cristian</title>
 </head>
 
 <body>
-    <header id="home">
+    <header id="header" class="">
         <div class="logo">
-            <img src="./assets/logo_fondo_Blanco_reducido.png" alt="Logo Origuen Cristian">
+            <img id="headerLogo" src="./assets/logo_fondo_Blanco_reducido.png" alt="Logo Origuen Cristian">
         </div>
         <nav class="menu">
             <ul class="menu__list">
@@ -26,13 +27,12 @@
                 <li class="list__item"><a href="#contact">Contact</a></li>
                 <li class="list__item"><a href="#works">Works</a></li>
             </ul>
-
         </nav>
     </header>
-    <section class="intro">
+    <section id="home" class="intro">
         <h1 class="titulo">¡Eres Bienvenido!</h1>
         <p class="titulo"> Explora mi camino como diseñador y desarrollador Front-end.</p>
-        <button id="intro-btn-contact">Contactame</button>
+        <!-- <button id="intro-btn-contact">Contactame</button> -->
         <div class="cuadrado__solido-uno"></div>
         <div class="cuadrado__solido-dos"></div>
         <div class="cuadrado__borde-uno"></div>
@@ -66,15 +66,15 @@
             </div>
             <div class="work_box box-three">
                 <div class="info">
-                    <h4 class="info-titulo">Prueba</h4>
-                    <p class="info-description"> Proyecto de curso Alura Latam, encriptador usando java script</p>
+                    <h4 class="info-titulo">Proximamente</h4>
+                    <p class="info-description"></p>
                     <a href=""><i class="bi bi-arrow-right"></i></a>
                 </div>
             </div>
             <div class="work_box box-four">
                 <div class="info">
-                    <h4 class="info-titulo">Prueba</h4>
-                    <p class="info-description"> Proyecto de curso Alura Latam, encriptador usando java script</p>
+                    <h4 class="info-titulo">Proximamente</h4>
+                    <p class="info-description"> </p>
                     <a href=""><i class="bi bi-arrow-right heading"></i></a>
                 </div>
             </div>
@@ -91,8 +91,8 @@
             <h4>About</h4>
         </div>
         <article class="about-article container-md">
-            <img class="about-img rounded-1" src="/assets/Cristianimagen3.jpeg" alt="">
-            <div class="about-descripcion">
+            <img data-aos="fade-right" class="about-img rounded-1" src="/assets/Cristianimagen3.jpeg" alt="">
+            <div data-aos="fade-left" class="about-descripcion">
                 <h6>Un poco de mi</h6>
                 <p>Pitch elevator
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, tempore. Eius, assumenda. Odit
@@ -102,7 +102,7 @@
             </div>
         </article>
         <article class="about-article container-md">
-            <div class="about-descripcion">
+            <div data-aos="fade-right" class="about-descripcion">
                 <h6>Mis hogares de aprendzajea</h6>
                 <p>Hablar de los lugares donde aorendi o aprendo
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, tempore. Eius, assumenda. Odit
@@ -110,11 +110,11 @@
                     incidunt unde?
                 </p>
             </div>
-            <img class="about-img" src="/assets/Cristianimagen1.jpeg" alt="">
+            <img data-aos="fade-left" class="about-img" src="/assets/Cristianimagen1.jpeg" alt="">
         </article>
         <article class="about-article container-md">
-            <img class="about-img" src="/assets/CristianImagen2.jpeg" alt="">
-            <div class="about-descripcion">
+            <img data-aos="fade-right" class="about-img" src="/assets/CristianImagen2.jpeg" alt="">
+            <div data-aos="fade-left" class="about-descripcion">
                 <h6>Mis hobbies</h6>
                 <p> habla de los hobbies
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, tempore. Eius, assumenda. Odit
@@ -155,5 +155,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init({
+        duration:1000,
+    });
+  </script>
+  <script src="/js/index.js"></script>
 
 </html>
