--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="home" class="intro">
         <h1 class="titulo">¡Eres Bienvenido!</h1>
         <p class="titulo"> Explora mi camino como diseñador y desarrollador Front-end.</p>
-        <!-- <button id="intro-btn-contact">Contactame</button> -->
+        <button id="intro-btn-contact">Contactame</button>
         <div class="cuadrado__solido-uno"></div>
         <div class="cuadrado__solido-dos"></div>
         <div class="cuadrado__borde-uno"></div>
@@ -74,7 +74,7 @@
             <div class="work_box box-four">
                 <div class="info">
                     <h4 class="info-titulo">Proximamente</h4>
-                    <p class="info-description"> </p>
+                    <p class="info-description"> Proyecto de curso Alura Latam, encriptador usando java script</p>
                     <a href=""><i class="bi bi-arrow-right heading"></i></a>
                 </div>
             </div>
