--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h5 class="info-titulo">Juego Ahorcado</h5>
                     <p class="info-description"> Proyecto de curso Alura Latam,usando logica de programacion java
                         script, html, css. </p>
-                    <a target="_blank" href="https://origuencristian.github.io/Proyecto-Ahorcado-Alura/index.html"> <i
+                    <a target="_blank" href="https://origuencristian.github.io/Proyecto-Ahorcado-Alura/index.html"><i
                             class="bi bi-arrow-right"></i>
                     </a>
                 </div>
@@ -161,6 +161,6 @@
         duration:1000,
     });
   </script>
-  <script src="/js/index.js"></script>
+  <script src="./js/index.js"></script>
 
 </html>
