--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
             <div class="cuadrados about-cuadrado__cuatro"></div>
         </div>
         <div class="contact-iconos">
-           <a href=""><img src="/assets/Vector.svg" alt=""></a> 
-           <a href=""><img src="/assets/Vector wapsap.svg" alt=""></a> 
-           <a href=""><img src="/assets/Vector linkedink.svg" alt=""></a> 
-           <a href=""><img src="/assets/Github.svg" alt=""></a> 
+           <a href=""><img src="../assets/Vector.svg" alt=""></a> 
+           <a href=""><img src="../assets/Vector wapsap.svg" alt=""></a> 
+           <a href=""><img src="../assets/Vector linkedink.svg" alt=""></a> 
+           <a href=""><img src="../assets/Github.svg" alt=""></a> 
         </div>
     </section>
     <footer>
@@ -161,6 +161,6 @@
         duration:1000,
     });
   </script>
-  <script src="./js/index.js"></script>
+  <script src="../js/index.js"></script>
 
 </html>
