INgreo de texto final

--- a/index.html
+++ b/index.html
@@ -91,35 +91,28 @@
             <h4>About</h4>
         </div>
         <article class="about-article container-md">
-            <img data-aos="fade-right" class="about-img rounded-1" src="/assets/Cristianimagen3.jpeg" alt="">
+            <img data-aos="fade-right" class="about-img rounded-1" src="assets/Cristianimagen3.jpeg" alt="">
             <div data-aos="fade-left" class="about-descripcion">
                 <h6>Un poco de mi</h6>
                 <p>Pitch elevator
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, tempore. Eius, assumenda. Odit
-                    dicta beatae aliquid eum, rem ipsum dolorem amet quod laborum, voluptate porro in minima est
-                    incidunt unde?
+                    Paciente, proactivo y decidido. Soy una persona dinamica y creativa, cualidades que pueden ser explotadas en el mundo del diseño y la programación. La ética y la responsabilidad, me hacen persona confiable en un equipo de trabajo, porque el permitir que mi equipo de trabajo crezca, me permite crecer también como persona y como profesional.
+
                 </p>
             </div>
         </article>
         <article class="about-article container-md">
             <div data-aos="fade-right" class="about-descripcion">
-                <h6>Mis hogares de aprendzajea</h6>
-                <p>Hablar de los lugares donde aorendi o aprendo
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, tempore. Eius, assumenda. Odit
-                    dicta beatae aliquid eum, rem ipsum dolorem amet quod laborum, voluptate porro in minima est
-                    incidunt unde?
+                <h6>Mis hogares de aprendizaje</h6>
+                <p>Mis inicios se dieron en el año 2021 con Alura latam como desarrollador web, patrocinado en una colaboración con Oracle, abriendome las puertas a este gran mundo. Posteriormente, realicé a través de Coursera una certificación de UX experiencia de usuario y para completar mis estudios, a inicios del año 2023 estudié Diseño Gráfico digital con CEM Mentors International. Para dar mayor peso a mis conocimientos, continué en Mentors International, estudiando diseño web. 
                 </p>
             </div>
-            <img data-aos="fade-left" class="about-img" src="/assets/Cristianimagen1.jpeg" alt="">
+            <img data-aos="fade-left" class="about-img" src="assets/Cristianimagen1.jpeg" alt="">
         </article>
         <article class="about-article container-md">
-            <img data-aos="fade-right" class="about-img" src="/assets/CristianImagen2.jpeg" alt="">
+            <img data-aos="fade-right" class="about-img" src="assets/CristianImagen2.jpeg" alt="">
             <div data-aos="fade-left" class="about-descripcion">
                 <h6>Mis hobbies</h6>
-                <p> habla de los hobbies
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, tempore. Eius, assumenda. Odit
-                    dicta beatae aliquid eum, rem ipsum dolorem amet quod laborum, voluptate porro in minima est
-                    incidunt unde?
+                <p> Entre mis principales hobbies, destacan la música. El interpretar en un intrumento la música y enseñar a otros a hacerlo. De igual manera, la lectura y peliculas de ciencia ficción y la escritura del mismo genero. Los videojuegos 
                 </p>
             </div>
         </article>
